2009-10-09 [paul]	0.9.8

	0.9.8 released.

2009-10-07 [iwkse]	0.9.7cvs13

	* src/fancy_viewer.c
		Fix bug with popup menu and actions

2009-09-30 [iwkse]	0.9.7cvs12

	* src/fancy_viewer.c
            Fix "search the web" menu action

2009-09-29 [iwkse]	0.9.7cvs11

	* src/fancy_viewer.h
	* src/fancy_viewer.c
            Added a menu for override preferences

2009-09-28 [iwkse]	0.9.7cvs10

	* src/fancy_viewer.c
            Added fancy_open_uri() to  handle http:// and mailto schemas

2009-09-28 [iwkse]	0.9.7cvs9

	* src/fancy_prefs.h
	* src/fancy_prefs.c
	* src/fancy_viewer.c
            Option to use by default external browser for links
            patch by Marcel|HSD

2009-08-10 [iwkse]	0.9.7cvs8

	* src/fancy_viewer.c
            Return the string instead of calling again the function

2009-08-10 [iwkse]	0.9.7cvs7

	* src/fancy_viewer.c
            Fix bug 1979: When selection is 0 length return NULL

2009-08-10 [iwkse]	0.9.7cvs6

	* src/fancy_prefs.c
	* src/fancy_viewer.c
            Fix inverted logic for block_links pref

2009-08-10 [iwkse]	0.9.7cvs5

	* src/fancy_viewer.c
            Fix bug 1980
            Use the webkit middle click paste available from version 1.1.12

2009-07-04 [wwp]	0.9.7cvs4

	* src/fancy_viewer.c
		Reset filename pointer we just free'd.
		Fix a potential leak in case of error.
		Slight code simplification.

2009-07-04 [iwkse]	0.9.7cvs3

	* src/fancy_viewer.c
            Add charset detection support
            patch by Aleksei Miheev

2009-07-04 [paul]	0.9.7cvs2

	* po/fi.po
		added by Tommi Pirinen

2009-07-04 [iwkse]	0.9.7cvs1

	* src/fancy_viewer.c
            Fix a double free crash

2009-07-03 [paul]	0.9.7

	0.9.7 released

2009-07-03 [paul]	0.9.6cvs20

	* NEWS
		added (needed by 'make dist')

2009-07-03 [paul]	0.9.6cvs19

	* po/cs.po
	* po/hu.po
	* po/id.po
	* po/it.po
	* po/ja.po
	* po/ru.po
		this time commit the correct files!

2009-07-03 [paul]	0.9.6cvs18

	* commitHelper
		added
	* po/fancy_plugin.pot
		removed
	* po/it.po